@@ -27,6 +27,8 @@ apt (0.9.5.2) UNRELEASED; urgency=low
   * doc/apt-get.8.xml:
     - move dselect-upgrade below dist-upgrade
     - review and fix spelling issues
+  * doc/apt-ftparchive.8.xml:
+    - fix typo, grammar and style issues
 
   [ Robert Luberda ]
   * Polish manpage translation update (Closes: #675603)
